# PepLink

./: .gitignore  LICENSE  Readme.md  Readme_zh.md  pyproject.toml
PepLink/: __init__.py  _aa_seqs_to_smiles_core.py  _chem.py  _smiles_to_aa_seqs_core.py  aa_seqs_to_smiles.py  adapters.py  data.py  exceptions.py  models.py  smiles_to_aa_seqs.py
PepLink/data/: bonds_w_chinese_comment.json
PepLink/data/terminal_modifications/: c_terminal_smiles_from_PubChem_handcrafted.csv  n_terminal_smiles_from_PubChem_handcrafted.csv
examples/: example_custom_noncanonical_aas.csv  quick_start.ipynb  quick_start.py
tests/: test_api.py  test_data.py
